// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Hamburger.js should match Arm Snapshot when Closed 1`] = `
<span
  className="jsx-301163176 jsx-179826770"
/>
`;

exports[`components/Hamburger.js should match Arm Snapshot when Open 1`] = `
<span
  className="jsx-301163176 jsx-794770576"
/>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when Menu is Open 1`] = `
<div
  className="jsx-4125533449 container"
  onClick={[Function]}
>
  <div
    className="jsx-4125533449 layers"
  >
    <span
      className="jsx-1304497301"
    />
    <span
      className="jsx-283106720"
    />
    <span
      className="jsx-3759017912"
    />
  </div>
  <div
    className="jsx-4125533449 arms"
  >
    <span
      className="jsx-301163176 jsx-794770576"
    />
    <span
      className="jsx-301163176 jsx-3128104624"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when Search is Open 1`] = `
<div
  className="jsx-4125533449 container"
  onClick={[Function]}
>
  <div
    className="jsx-4125533449 layers"
  >
    <span
      className="jsx-1304497301"
    />
    <span
      className="jsx-283106720"
    />
    <span
      className="jsx-3759017912"
    />
  </div>
  <div
    className="jsx-4125533449 arms"
  >
    <span
      className="jsx-301163176 jsx-794770576"
    />
    <span
      className="jsx-301163176 jsx-3128104624"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when close 1`] = `
<div
  className="jsx-4125533449 container"
  onClick={[Function]}
>
  <div
    className="jsx-4125533449 layers"
  >
    <span
      className="jsx-3221435804"
    />
    <span
      className="jsx-3063298808"
    />
    <span
      className="jsx-3630948284"
    />
  </div>
  <div
    className="jsx-4125533449 arms"
  >
    <span
      className="jsx-301163176 jsx-179826770"
    />
    <span
      className="jsx-301163176 jsx-2834914619"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Layer Snapshot when Closed 1`] = `
<span
  className="jsx-3221435804"
/>
`;

exports[`components/Hamburger.js should match Layer Snapshot when Open 1`] = `
<span
  className="jsx-1304497301"
/>
`;
